--- a/yam-yam/src/main/webapp/css/common.css
+++ b/yam-yam/src/main/webapp/css/common.css
@@ -1,58 +1,64 @@
+
+/* ================= width =============== */
+
+.w-100 {width: 100% !important;}
+.w-90 {width: 90% !important;}
+.w-80 {width: 80% !important;}
+.w-70 {width: 70% !important;}
+.w-60 {width: 60% !important;}
+.w-50 {width: 50% !important;}
+.w-40 {width: 40% !important;}
+.w-30 {width: 30% !important;}
+.w-20 {width: 20% !important;}
+.w-10 {width: 10% !important;}
+
+/* ================= margin padding =============== */
+
+.m-0auto {margin: 0 auto;}
+.ml-auto {margin-left: auto;}
+.mr-auto {margin-right: auto;}
+
+.pb-1 {padding-bottom :1rem !important;}
+
+.text-c {text-align: center;}
+.text-r {text-align: right;}
+
+
+/* ================= color =============== */
+
+/* bg컬러 */
+
+.bg-gr100 {background-color: #FCFCFC;}
+.bg-gr150 {background-color: #F8F8FA;}
+.bg-gr300 {background-color: #D9D9D9;}
+.bg-gr400 {background-color: #A8A6A6;}
+.bg-gr450 {background-color: #999;}
+.bg-gr500 {background-color: #767676;}
+.bg-gr600 {background-color: #191919;}
+.bg-wh {background-color: #fff;}
+.bg-bk {background-color: #000;}
+.bg-main {background-color: #FF7800;}
+
+/* text컬러 */
+
+.text-gr100 {color: #FCFCFC;}
+.text-gr150 {color: #F8F8FA;}
+.text-gr300 {color: #D9D9D9;}
+.text-gr400 {color: #A8A6A6;}
+.text-gr450 {color: #999;}
+.text-gr500 {color: #767676;}
+.text-gr600 {color: #191919;}
+.text-wh {color: #fff;}
+.text-bk {color: #000;}
+.text-main {color: #FF7800;}
+
+
+/* ================= flex =============== */
+
 .flex-box {
   display: flex;
   flex-wrap: wrap;
 }
-
-.f-around {
-  justify-content: space-around;
-}
-
-.f-between {
-  justify-content: space-between;
-}
-
-.f-center {
-  justify-content: center;
-}
-
-.items img {
-  max-width: 100%;
-}
-
-.hidden{
-  display: none;
-}
-.active {
-  display: block !important;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.w-90 {
-  width: 90%;
-}
-.w-80 {
-  width: 80%;
-}
-
-.w-10 {
-  width: 10%;
-}
-
-.m-0auto {
-  margin: 0 auto;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.text-c {
-  text-align: center;
-}
-
-.pb-1 {
-  padding-bottom :1rem;
-}
+.f-around {justify-content: space-around;}
+.f-between {justify-content: space-between;}
+.f-center {justify-content: center;}
