--- a/yam-yam/src/main/webapp/css/HY.css
+++ b/yam-yam/src/main/webapp/css/HY.css
@@ -1,1 +1,13 @@
 @charset "UTF-8";
+/* 페이지 레이아웃
+--------------------------*/
+.page-main{
+	background:#FFFFFF;
+	margin:40px 0;
+	border-radius:5px;
+	box-shadow:0 2px 6px rgba(100,100,100,0.3);
+	min-height:650px;
+}
+.content-main{
+	padding:10px 20px;
+}
