--- a/yam-yam/src/main/webapp/css/common.css
+++ b/yam-yam/src/main/webapp/css/common.css
@@ -19,38 +19,50 @@
 .mr-auto {margin-right: auto;}
 
 .pb-1 {padding-bottom :1rem !important;}
+.pl-1 {padding-left: 1rem !important;}
 
 .text-c {text-align: center;}
 .text-r {text-align: right;}
 
 
 /* ================= color =============== */
+:root {
+	--main-color : #FF7800;
+	--gr100 : #FCFCFC;
+	--gr150 : #F8F8FA;
+	--gr300 : #D9D9D9;
+	--gr400 : #A8A6A6;
+	--gr450 : #999;
+	--gr500 : #767676;
+	--gr600 : #191919;
+	--wh : #fff;
+	--bk : #000;
+}
 
 /* bg컬러 */
 
-.bg-gr100 {background-color: #FCFCFC;}
-.bg-gr150 {background-color: #F8F8FA;}
-.bg-gr300 {background-color: #D9D9D9;}
-.bg-gr400 {background-color: #A8A6A6;}
-.bg-gr450 {background-color: #999;}
-.bg-gr500 {background-color: #767676;}
-.bg-gr600 {background-color: #191919;}
-.bg-wh {background-color: #fff;}
-.bg-bk {background-color: #000;}
-.bg-main {background-color: #FF7800;}
+.bg-gr100 {background-color: var(--gr100);}
+.bg-gr150 {background-color: var(--gr150);}
+.bg-gr300 {background-color: var(--gr300);}
+.bg-gr400 {background-color: var(--gr400);}
+.bg-gr450 {background-color: var(--gr450);}
+.bg-gr500 {background-color: var(--gr500);}
+.bg-gr600 {background-color: var(--gr600);}
+.bg-wh {background-color: var(--wh);}
+.bg-bk {background-color: var(--bk);}
+.bg-main {background-color: var(--main-color);}
 
 /* text컬러 */
-
-.text-gr100 {color: #FCFCFC;}
-.text-gr150 {color: #F8F8FA;}
-.text-gr300 {color: #D9D9D9;}
-.text-gr400 {color: #A8A6A6;}
-.text-gr450 {color: #999;}
-.text-gr500 {color: #767676;}
-.text-gr600 {color: #191919;}
-.text-wh {color: #fff;}
-.text-bk {color: #000;}
-.text-main {color: #FF7800;}
+.text-gr100 {color: var(--gr100);}
+.text-gr150 {color: var(--gr150);}
+.text-gr300 {color: var(--gr300);}
+.text-gr400 {color: var(--gr400);}
+.text-gr450 {color: var(--gr450);}
+.text-gr500 {color: var(--gr500);}
+.text-gr600 {color: var(--gr600);}
+.text-wh {color: var(--wh);}
+.text-bk {color: var(--bk);}
+.text-main {color: var(--main-color);}
 
 
 /* ================= flex =============== */
@@ -62,3 +74,28 @@
 .f-around {justify-content: space-around;}
 .f-between {justify-content: space-between;}
 .f-center {justify-content: center;}
+
+/* ================= button =============== */
+/* 버튼 기본속성  */
+button {
+	border:none;
+    width: 120px;
+    height: 48px;
+    border-radius: 10px;
+	}
+/* 메인컬러 버  */
+.btn-primary {
+	background: var(--main-color);
+	color: var(--gr100);
+}
+.btn-line-primary {
+	border : 1px solid var(--main-color);
+	color: var(--main-color);
+	background:transparent;
+}
+/* 버튼에 아이콘 들어갈때 사용 */
+.btn-icon {
+	background-repeat:no-repeat;
+	background-position: 7px 12px;
+    background-size: 24px;
+}
