--- a/yam-yam/src/main/webapp/css/style.css
+++ b/yam-yam/src/main/webapp/css/style.css
@@ -426,11 +426,11 @@ header button {
   color: #000;
 }
 
-.btn_area {
+header .btn_area {
   width: calc(30% - 100px);
   height: fit-content;
 }
 
-.btn_area li {
+header .btn_area li {
   height: fit-content;
 }
