--- a/yam-yam/src/main/webapp/css/common.css
+++ b/yam-yam/src/main/webapp/css/common.css
@@ -18,8 +18,12 @@
 .ml-auto {margin-left: auto;}
 .mr-auto {margin-right: auto;}
 
+.p-1 {padding:1rem;}
+.p-2 {padding:2rem;}
 .pb-1 {padding-bottom :1rem !important;}
 .pl-1 {padding-left: 1rem !important;}
+
+.pt-2{padding-top:2rem;}
 
 .text-c {text-align: center;}
 .text-r {text-align: right;}
@@ -64,6 +68,19 @@
 .text-bk {color: var(--bk);}
 .text-main {color: var(--main-color);}
 
+/* ================= text 속성 =============== */
+
+.fw-500 {font-weight:500;}
+.fw-600 {font-weight:600;}
+.fw-700 {font-weight:700;}
+.fw-800 {font-weight:800;}
+
+.fs-06{font-size:.6rem;}
+.fs-08{font-size:.8rem;}
+.fs-12{font-size:1.2rem;}
+.fs-16{font-size:1.6rem;}
+
+
 
 /* ================= flex =============== */
 
@@ -74,6 +91,7 @@
 .f-around {justify-content: space-around;}
 .f-between {justify-content: space-between;}
 .f-center {justify-content: center;}
+
 
 /* ================= button =============== */
 /* 버튼 기본속성  */
