--- a/yam-yam/src/main/webapp/css/YJ.css
+++ b/yam-yam/src/main/webapp/css/YJ.css
@@ -70,14 +70,13 @@
 	padding: 5px 10px;
 	border-radius: 5px;
 	border-bottom-left-radius: 0;
-  font-size: .8rem;
-  vertical-align: text-top;
+	font-size: .8rem;
+	vertical-align: text-top;
 }
 
 /* .msg-box textarea{
 	width:100%;
 } */
-
 .btnClose {
 	background: url('../images/icon-close.png') no-repeat;
 	width: 48px;
@@ -85,13 +84,18 @@
 
 /* others
 -------------------------- */
-
 .tab {
 	width: 200px;
-  display: block;
-  text-align: center;
-  padding: 1rem;
+	display: block;
+	text-align: center;
+	padding: 1rem;
 }
+
+.tab span {
+	vertical-align: super;
+	padding-left: 5px;
+}
+
 .selected {
 	border-bottom: 3px solid #A8A6A6;
 }
