--- a/yam-yam/src/main/webapp/css/common.css
+++ b/yam-yam/src/main/webapp/css/common.css
@@ -2,6 +2,7 @@
 /* ================= width =============== */
 
 .w-100 {width: 100% !important;}
+.w-95 {width: 95% !important;}
 .w-90 {width: 90% !important;}
 .w-80 {width: 80% !important;}
 .w-70 {width: 70% !important;}
@@ -17,8 +18,20 @@
 .m-0auto {margin: 0 auto !important;}
 .ml-auto {margin-left: auto !important;}
 .mr-auto {margin-right: auto !important;}
+.mt-1 {margin-top:1rem !important;}
+.mt-2 {margin-top:2rem !important;}
+.mt-3 {margin-top:3rem !important;}
+.mr-1 {margin-right:1rem !important;}
+.mr-2 {margin-right:2rem !important;}
+.mr-3 {margin-right:3rem !important;}
 .mb-1 {margin-bottom:1rem !important;}
+.mb-2 {margin-bottom:2rem !important;}
+.mb-3 {margin-bottom:3rem !important;}
+.ml-1 {margin-left:1rem !important;}
+.ml-2 {margin-left:2rem !important;}
+.ml-3 {margin-left:3rem !important;}
 
+.p-05 {padding:.5rem !important;}
 .p-1 {padding:1rem !important;}
 .p-2 {padding:2rem !important;}
 .pb-1 {padding-bottom :1rem !important;}
@@ -71,15 +84,15 @@
 
 /* ================= text 속성 =============== */
 
-.fw-500 {font-weight:500;}
-.fw-600 {font-weight:600;}
-.fw-700 {font-weight:700;}
-.fw-800 {font-weight:800;}
+.fw-500 {font-weight:500 !important;}
+.fw-600 {font-weight:600 !important;}
+.fw-700 {font-weight:700 !important;}
+.fw-800 {font-weight:800 !important;}
 
-.fs-06{font-size:.6rem;}
-.fs-08{font-size:.8rem;}
-.fs-12{font-size:1.2rem;}
-.fs-16{font-size:1.6rem;}
+.fs-06{font-size:.6rem !important;}
+.fs-08{font-size:.8rem !important;}
+.fs-12{font-size:1.2rem !important;}
+.fs-16{font-size:1.6rem !important;}
 
 
 
@@ -92,6 +105,7 @@
 .f-around {justify-content: space-around;}
 .f-between {justify-content: space-between;}
 .f-center {justify-content: center;}
+.f-end {justify-content: end;}
 
 /* ================= display 속성 =============== */
 .block-box {display:block !important;}
@@ -100,11 +114,11 @@
 
 /* ================= button =============== */
 /* 버튼 기본속성  */
-button {
+button,.btn {
 	border:none;
-    width: 120px;
-    height: 48px;
-    border-radius: 10px;
+  width: 120px;
+  height: 48px;
+  border-radius: 10px;
 	}
 /* 메인컬러 버  */
 .btn-primary {
