--- a/yam-yam/src/main/webapp/css/YJ.css
+++ b/yam-yam/src/main/webapp/css/YJ.css
@@ -11,15 +11,11 @@
 }
 
 .date-position {
-	text-align: center;
-}
-
-.date-position span {
-	display: inline-block;
-	width: 300px;
-	height: 20px;
+	padding: .5rem;
 	border-radius: 10px;
 	background-color: #f2efef;
+	margin: 0 auto;
+  text-align: center;
 }
 
 .from-position {
