--- a/yam-yam/src/main/webapp/css/common.css
+++ b/yam-yam/src/main/webapp/css/common.css
@@ -12,21 +12,26 @@
 .w-30 {width: 30% !important;}
 .w-20 {width: 20% !important;}
 .w-10 {width: 10% !important;}
+.w-05 {width: 5% !important;}
 
 /* ================= margin padding =============== */
 
 .m-0auto {margin: 0 auto !important;}
 .ml-auto {margin-left: auto !important;}
 .mr-auto {margin-right: auto !important;}
+.mt-05 {margin-top:.5rem !important;}
 .mt-1 {margin-top:1rem !important;}
 .mt-2 {margin-top:2rem !important;}
 .mt-3 {margin-top:3rem !important;}
+.mr-05 {margin-right:.5rem !important;}
 .mr-1 {margin-right:1rem !important;}
 .mr-2 {margin-right:2rem !important;}
 .mr-3 {margin-right:3rem !important;}
+.mb-05 {margin-bottom:.5rem !important;}
 .mb-1 {margin-bottom:1rem !important;}
 .mb-2 {margin-bottom:2rem !important;}
 .mb-3 {margin-bottom:3rem !important;}
+.ml-05 {margin-left:.5rem !important;}
 .ml-1 {margin-left:1rem !important;}
 .ml-2 {margin-left:2rem !important;}
 .ml-3 {margin-left:3rem !important;}
@@ -91,10 +96,15 @@
 
 .fs-06{font-size:.6rem !important;}
 .fs-08{font-size:.8rem !important;}
+.fs-10{font-size:1rem !important;}
 .fs-12{font-size:1.2rem !important;}
+.fs-14{font-size:1.4rem !important;}
 .fs-16{font-size:1.6rem !important;}
 
-
+.va-super { vertical-align: super;}
+/* ================= position =============== */
+.position-r {position:relative !important;}
+.position-a {position:absolute !important;}
 
 /* ================= flex =============== */
 
@@ -112,6 +122,9 @@
 .inline-box {display:inline !important;}
 .inblo-box {display:inline-block !important;}
 
+/* ================= float무효화  =============== */
+.no-float {float:none !important;}
+
 /* ================= button =============== */
 /* 버튼 기본속성  */
 button,.btn {
@@ -120,7 +133,14 @@ button,.btn {
   height: 48px;
   border-radius: 10px;
 	}
-/* 메인컬러 버  */
+	
+.btn-re { /* 댓글용 버튼 */
+	border:none;
+	width: 60px;
+  height: 32px;
+  border-radius: 5px;
+}
+/* 메인컬러 버튼 */
 .btn-primary {
 	background: var(--main-color);
 	color: var(--gr100);
@@ -137,8 +157,56 @@ button,.btn {
   background-size: 24px;
 }
 
+.btn-close {
+	background: url('../images/icon-close.png') no-repeat;
+  background-size: contain;
+	width: 48px;
+}
+
+.btn-edit {
+	background: url('../images/icon-edit.png') no-repeat;
+  background-size: contain;
+	width: 48px;
+}
+
+.btn-reClose, .btn-reEidt {
+	position:absolute;
+	border:none;
+}
+.btn-reClose {
+	top: 1rem;
+	right: 1rem;
+	width: 32px;
+  height: 32px;
+}
+
+.btn-reEidt {
+	bottom: 1rem;
+	right: 1rem;
+	width: 20px;
+  height: 20px;
+}
+
 /* ================= 아이콘 =============== */
 .icon {
 	width: 32px;
 	height: 32px;
+}
+/* ===============기타 =============== */
+.bar {
+	border-bottom: 2px solid var(--gr300);
+	height:2px;
+	width:100%;
+}
+
+.re-count {
+  bottom: 0;
+  right: 0;
+  padding: 0;
+}
+
+#re_first.re-count {
+	padding: 0;
+	margin: 0;
+	
 }
