--- a/yam-yam/src/main/webapp/css/common.css
+++ b/yam-yam/src/main/webapp/css/common.css
@@ -45,12 +45,28 @@ body,header,main,div,footer {
 .ml-3 {margin-left:3rem !important;}
 
 .p-05 {padding:.5rem !important;}
-.p-1 {padding:1rem !important;}
-.p-2 {padding:2rem !important;}
-.pb-1 {padding-bottom :1rem !important;}
-.pl-1 {padding-left: 1rem !important;}
-
+.p-1 {padding: 1rem !important;}
+.p-2 {padding: 2rem !important;}
+.p-3 {padding: 3rem !important;}
+.pt-05{padding-top:.5rem !important;}
+.pt-1{padding-top:1rem !important;}
 .pt-2{padding-top:2rem !important;}
+.pt-3{padding-top:3rem !important;}
+.pr-05{padding-right: .5rem !important;}
+.pr-1{padding-right: 1rem !important;}
+.pr-2{padding-right: 2rem !important;}
+.pr-3{padding-right: 3rem !important;}
+.pb-05 {padding-bottom :.5rem !important;}
+.pb-1 {padding-bottom :1rem !important;}
+.pb-2 {padding-bottom :2rem !important;}
+.pb-3 {padding-bottom :3rem !important;}
+.pl-05 {padding-left: .5rem !important;}
+.pl-1 {padding-left: 1rem !important;}
+.pl-2 {padding-left: 2rem !important;}
+.pl-3 {padding-left: 3rem !important;}
+
+
+
 
 .text-c {text-align: center !important;}
 .text-r {text-align: right !important;}
