--- a/yam-yam/src/main/webapp/css/HY.css
+++ b/yam-yam/src/main/webapp/css/HY.css
@@ -168,14 +168,9 @@ table {
         color: #555;
     }
     input[type="text"], input[type="file"], input[type="checkbox"], select {
-        width: 100%;
-        padding: 10px;
-        margin-top: 5px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        font-size: 14px;
+    padding: .7rem;
+    border-radius: 5px;
     }
-   
     input[type="checkbox"] {
         width: auto;
     }
@@ -365,7 +360,7 @@ table {
 /* ========================== write_form CSS ========================== */
 
 #write_form {
-    width: 600px;
+    width: 650px;
     margin: 0 auto;
     border: 1px solid #ddd;
     border-radius: 8px;
