--- a/yam-yam/src/main/webapp/css/style.css
+++ b/yam-yam/src/main/webapp/css/style.css
@@ -28,9 +28,10 @@ a:hover{
 	box-shadow:0 2px 6px rgba(100,100,100,0.3);
 	min-height:650px;
 } */
-/* .content-main{
+ .content-main{
 	padding:10px 20px;
-} */
+	width: 60%;
+} 
 /* 공통 메시지
 --------------------------*/
 .result-display{
